# Priap.OS

./: .env.example  .gitignore  AGORA.md  CLAUDE.md  PLAN.md  README.md  THOUGHTS.md  pyproject.toml
ai/: AI_1.java
ais/: alpha_strike.leek  archetype_balanced.leek  archetype_burst.leek  archetype_kiter.leek  archetype_rusher.leek  archetype_tank.leek  current  fighter_v1.leek  fighter_v10.leek  fighter_v11.leek  fighter_v11_flat.leek  fighter_v12.leek  fighter_v12_flat.leek  fighter_v13.leek  fighter_v13_flat.leek  fighter_v14.leek  fighter_v14_flat.leek  fighter_v15_flat.leek  fighter_v2.leek  fighter_v3.leek  fighter_v4.leek  fighter_v5.leek  fighter_v6.leek  fighter_v7.leek  fighter_v8.leek  fighter_v9.leek  test_kiter.leek  test_minimal.leek  test_pure_kiter.leek  v11_chips.leek  v12_midgame.leek  v14_opening.leek  v8_accessible_cells.leek  v8_combat.leek  v8_danger_map.leek  v8_hide_seek.leek  v8_state.leek
dataset/: README.md  complete_leekwars_collector.py  config.py  final_leekwars_dataset_builder.py  leekwars_dataset_builder.py  leekwars_fights.csv  leekwars_fights.json
docs/: API.md  CHARTE_GRAPHIQUE.md  GANTT_S30.md  GANTT_SESSION20.md  GANTT_SESSION27.md  GANTT_SESSION53.md  GROUND_TRUTH.md  LEEK.md  RESEARCH_LINKS.md  RESEARCH_STRATEGY.md  ROADMAP.md  THESIS.md  astro.config.mjs  package-lock.json  package.json  project_alpha_strike_integration.md
scripts/: analyze_fight_db.py  analyze_first_mover.py  analyze_matchup.py  analyze_movement.py  analyze_recent_fights.py  auto_daily_fights.py  backfill_fights_meta.py  backfill_leek_observations.py  (+54 more)
(+210 files in other folders)
